provider/provider-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: provider
  namespace: dataspace
spec:
  ingressClassName: nginx
  rules:
    - host: provider.local
      http:
        paths:
          - backend:
              service:
                name: provider
                port:
                  number: 8030
            path: /
            pathType: Prefix
